# django-boilerplate

./: .editorconfig  .gitignore  Makefile  README.md  package.json  packge.json  pyproject.toml  server.js  webpack.base.config.js  webpack.local.config.js  webpack.prod.config.js
backend/project_name/: settings.py  urls.py  wsgi.py
backend/templates/: base.html
backend/templates/myapp/: itworks.html
common/: models.py
frontend/js/: App.js  index.js
frontend/js/services/: api.js
frontend/sass/: style.scss
frontend/sass/helpers/: _all.scss
project_name/: settings.py  urls.py
users/: admin.py  models.py
