[tool.poetry]
name = "django-boilerplate"
version = "0.1.1"
description = "A simple boilerplate to quickstart a new Django Project"
authors = ["Marcus Gabriel <marcusgabriel.ds@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
django-silk = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
