[tool.poetry]
name = "{{ project_name }}-backend"
version = "0.1.1"
description = "{{ project_name }} backend"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
django-webpack-loader = "^0.6.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
django-silk = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
